--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	runtimeOnly 'com.h2database:h2'
+	//implementation 'com.google.firebase:firebase-admin:9.2.0' // Firebase Admin SDK 버전에 따라 변경
+	implementation group: 'com.google.firebase', name: 'firebase-admin', version: '9.2.0'
 }
 
 tasks.named('test') {
